Learnings/Cohort3/Kubernetes/LearningKubernetes/namespace-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
