Learnings/Cohort3/Kubernetes/LearningKubernetes/pod-manifest-namespace-with-namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: backend
spec:
  containers:
    - name: httpd-container
      image: httpd
      ports:
      - containerPort: 80
