Learnings/Cohort3/Kubernetes/LearningKubernetes/service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

# This will create an external load balancer
